# gesture_detection

./: .gitignore  README.md  label_images.py  main.py  pyproject.toml
dataset/: dataset_config.yaml
preprocessing/: label_images.py
training/: yolo.py
