[project]
name = "gesture-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "opencv-python>=4.12.0.88",
    "uuid>=1.30",
    "pyqt5==5.15.10",
    "pyqt5-qt5==5.15.2",
    "ultralytics>=8.3.235",
    "torch==2.8.0+cu128",
    "torchvision==0.23.0+cu128",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
